@@ -1,2 +1,1 @@
-SUBDIRS = src doc
-EXTRA_DIST = samples/Makefile samples/turnup.txt samples/sample.txt
+SUBDIRS = src doc samples
