@@ -1,1 +1,2 @@
 dist_man1_MANS = drawtiming.1
+EXTRA_DIST = drawtiming.html
