@@ -1,7 +1,0 @@
-
-all: turnup.gif sample.gif
-
-.txt.gif:
-	../src/drawtiming -o $@ $<
-
-.SUFFIXES: .gif .txt
