@@ -1,0 +1,4 @@
+TESTS = runsamples.sh
+EXTRA_DIST = runsamples.sh turnup.txt sample.txt statement1.txt
+CLEANFILES = turnup.gif sample.gif statement1.gif
+
