@@ -1,8 +1,8 @@
-POWER=0, FIRE=0, ARMED=0, LED=OFF.
+POWER=0, FIRE=0, ARMED=0, LED=OFF, COUNT=N.
 POWER=1 => LED=GREEN.
 FIRE=1.
 FIRE => ARMED=1.
 FIRE=0.
 FIRE=1.
 FIRE, ARMED => LED=RED;
-FIRE => ARMED=0.
+FIRE => COUNT="N+1".
