@@ -1,3 +1,10 @@
+2004-09-22  Edward Counce  <ecounce@users.sourceforge.net>
+
+	* added "make check" target in the samples directory
+
+	* updated documentation about signal values, and removed duplicate
+	documentation from README.
+
 2004-09-21  Edward Counce  <ecounce@users.sourceforge.net>
 
 	* added support for quoted signal values
